xam/webapi/credit_api.yml
#定义对外访问的服务名字和端口
apiVersion: v1
kind: Service
metadata:
  name: credit-svc          #服务名字
  namespace: api-xam     #命名空间
spec:
  selector:
    app: credit-api         #        
  type: ClusterIP
  ports:
  - protocol: TCP   
    port: 10001  
    targetPort: 10001
    name: webapi
  - protocol: TCP   
    port: 10002  
    targetPort: 10002
    name: newthrift
  - protocol: TCP   
    port: 10003 
    targetPort: 10003
    name: oldthrift
---
apiVersion: v1
kind: Service
metadata:
  name: ovcredit-svc
  namespace: api-xam
spec:
  type: ExternalName
  externalName: ovcredit.goweinet.com
  ports:
  - port: 13001
    targetPort: 13001
