xam/webapi/statistics_api.yml
#定义对外访问的服务名字和端口
apiVersion: v1
kind: Service
metadata:
  name: statistics-svc            #服务名字
  namespace: api-xam           #命名空间
spec:
  selector:
    app: statistics-api           #        
  type: ClusterIP
  ports:
  - protocol: TCP   
    port: 10001  
    targetPort: 10001
    name: webapi
  - protocol: TCP   
    port: 10002  
    targetPort: 10002
    name: newthrift
  - protocol: TCP   
    port: 10003 
    targetPort: 10003
    name: oldthrift
---
apiVersion: v1
kind: Service
metadata:
  name: ovstatistics-svc
  namespace: api-xam
spec:
  type: ExternalName
  externalName: ovstatistics.goweinet.com
  ports:
  - port: 15001
    targetPort: 15001
